--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,6 +2,8 @@
   max-width: 880px;
   margin: 0 auto;
   padding: 45px 0 37px;
+  display: flex;
+  justify-content: space-between;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
@@ -14,6 +16,6 @@
 
 @media screen and (max-width: 539px) {
   .header {
-    padding: 28px 0 28px 27px;
+    padding: 28px 30px 28px 30px;
   }
 }
