--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,19 @@
 @import url(./blocks/page/__elements/page__elements.css);
 
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__button/header__button.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__links/header__links.css);
+@import url(./blocks/header/__text/header__text.css);
+@import url(./blocks/header/__user-email/header__user-email.css);
 @import url(./blocks/logo/logo.css);
+
+@import url(./blocks/auth/auth.css);
+@import url(./blocks/auth/__form/auth__form.css);
+@import url(./blocks/auth/__title/auth__title.css);
+@import url(./blocks/auth/__text/auth__text.css);
+@import url(./blocks/auth/__save-button/auth__save-button.css);
+@import url(./blocks/auth/__link/auth__link.css);
 
 @import url(./blocks/content/content.css);
 
@@ -53,3 +65,10 @@
 @import url(./blocks/popup/__error/popup__error.css);
 @import url(./blocks/popup/__error/_visible/popup__error_visible.css);
 @import url(./blocks/popup/__title/_confirm/popup__title_confirm.css);
+
+@import url(./blocks/tooltip/tooltip.css);
+@import url(./blocks/tooltip/__close-button/tooltip__close-button.css);
+@import url(./blocks/tooltip/__container/tooltip__container.css);
+@import url(./blocks/tooltip/__image/tooltip__image.css);
+@import url(./blocks/tooltip/__text/tooltip__text.css);
+@import url(./blocks/tooltip/_opened/tooltip_opened.css);
