--- a/src/blocks/tooltip/__text/tooltip__text.css
+++ b/src/blocks/tooltip/__text/tooltip__text.css
@@ -1,8 +1,24 @@
 .tooltip__text {
-    margin: 0 36px 60px;
-    text-align: center;
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 29.05px;
-    color: #000;
+  margin: 0 36px 60px;
+  text-align: center;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29.05px;
+  color: #000;
+}
+
+@media screen and (max-width: 539px) {
+  .tooltip__text {
+    font-size: 20px;
+    line-height: 24px;
+    margin-left: 46px;
+    margin-right: 46px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .tooltip__text {
+    margin-left: 18px;
+    margin-right: 18px;
+  }
 }
