--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -4,14 +4,14 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 2.2;
-  transition: opacity .3s linear;
+  transition: opacity 0.3s linear;
   text-decoration: none;
   margin-left: 24px;
 }
 
 .header__link:hover {
-  opacity: .6;
-  cursor: pointer;  
+  opacity: 0.6;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 539px) {
