--- a/src/blocks/tooltip/__container/tooltip__container.css
+++ b/src/blocks/tooltip/__container/tooltip__container.css
@@ -1,12 +1,11 @@
 .tooltip__container {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    width: 100%;
-    max-width: 430px;
-    max-height: 330px;
-    background-color: #FFF;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
-    
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  width: 100%;
+  max-width: 430px;
+  max-height: 330px;
+  background-color: #fff;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
 }
